Fix rendering bug for mood tracker on mobiles

--- a/app/app.css
+++ b/app/app.css
@@ -157,8 +157,6 @@ textarea {
 
 .tracker_graphs>.graph {
   display: block;
-  width: 45%;
-  min-width: 375px;
   margin: 0 20px;
   max-width: 100%;
 }
